Fix stying for dark mode

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -40,7 +40,7 @@ body {
 }
 
 a {
-  color: #9c9c9c;
+  color: #888888;
   margin-left: 10px;
   margin-right: 5px;
 }
